shacira/Extern/SIEMENS/PCS7LW32/PCS7LNK.H

/*--------------------- Fehlerarten --------------------------*/

#define S7_E_NOERR              0   /* alles OK */
#define S7_E_TIMEOUT            -1  /* ZeitÅberlauf */
#define S7_E_BADBAUD            -2  /* Baudrate ungÅltig */
#define S7_E_BADMPIADR          -3  /* MPI-Adresse ungÅltig */
#define S7_E_NOCOM              -4  /* COM nicht vorhanden  */
#define S7_E_NOBST              2
#define S7_E_BSTLEN             2
#define S7_E_NODATA             2   /* Datenbereich existiert nicht */
                                    
#define S7_E_DEMOEND            0x1234
#define COM1                    0
#define COM2                    1
#define COM3                    2
#define COM16                   15
   #define TRUE                1
   #define FALSE               0
    #define TRUE                1
    #define FALSE               0
    typedef unsigned char       BYTE;
    typedef unsigned short int  WORD;
    typedef unsigned long       DWORD;
    typedef void                far *_PVOID;
    typedef WORD                far *LPWORD;
    typedef DWORD               far *LPDWORD;
      typedef int                 BOOL;
      typedef BYTE                BOOL;
    typedef LPVOID              _PVOID;
/* ------------------------------------------------------------------ */
        
typedef struct
{
  WORD Com;    
  BOOL bInit;
  int  Err;  
  int  SPSTyp;  /* 0 = S7 400/400 mit MPI-Kabel */
                           /* 1 = S7 200 mit PPI-Kabel */
  BYTE Internal[1536];
} S7, WINFAR *PS7, far *LPS7;
/* ------------------------------------------------------------------ */
/* --------------------- globale Funktionen ------------------------- */
/* ------------------------------------------------------------------ */

extern BOOL WINAPI
S7Init (LPS7 lpS7, WORD Com, WORD SPSMPIAdr, WORD LocalMPIAdr, WORD Baud);
/*
      Zweck:  S7Init initialisiert das in pS7 beschriebene an pS7->Com 
              angeschlossene AG und die dazugehîrige Schnittstelle. 
              pS7->Com mu· COM1, COM2, COM3 ... COM16 sein. 
              pS7->MPINr ist die MPI-Nummer 
  
  Parameter:  Name          Typ      Beschreibung
                            
              pS7           LPS7      Pointer auf den Speicher fÅr das angewÑhlte 
                                     AG 
              SPSMPIAdr     WORD     MPI-Adresse des Partner (SPS)
              LocalMPIAdr   WORD     eigen MPI-Adresse (normal 0)
              Baud          WORD     19200, 38400           
 
     Return:  BOOL          TRUE    wenn erfolgreich, 
                            FALSE   bei Fehler pS7->Err auswerten

*/ 

/* ab V 1.12*/
extern BOOL WINAPI
S7InitFastBaud (LPS7 lpS7, WORD Com, WORD SPSMPIAdr, WORD LocalMPIAdr, DWORD Baud);
/*
  wie S7InitFastBaudEx jedoch mit MPIBaud --> 
  0 = 187,5 kBit/s auf MPI-Bus
  1 = 19,2 kBit/s
  2 = 1,5 MBit/s
           
*/

/*------------------------------------------------------------*/

extern BOOL WINAPI
S7Exit (LPS7 pS7);
/*
      Zweck:  S7xit  mu· fÅr jede mit S7nit mit Return TRUE 
              initialisierte Struktur S7 ausgefÅhrt werden. 
              Die zugehîrigen Schnittstelle wird deaktiviert.
                                                
                        
  Parameter:  Name     Typ      Beschreibung
  
              pS7     LPS7       Pointer auf den Speicher fÅr das angewÑhlte 
                                AG 
 
     Return:  BOOL      TRUE    wenn erfolgreich, 
                        FALSE   bei Fehler 
*/


/* ------------------------------------------------------------------ */
/* ------------------Merker-Operationen------------------------------ */
/* ------------------------------------------------------------------ */


extern BOOL WINAPI 
S7RdMB (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Zweck:  S7RdMB  liest vom  mit  pS7  initalisierten AG ab dem 
              Merkerbyte <Ab> <Anz> Bytes in den PC-Speicher 
              Buf  ein. Maximale Anzahl = 128 Byte
               
  
  Parameter:  Name     Typ      Beschreibung
              pS7      LPS7      Pointer auf den Speicher fÅr das angewÑhlte 
                                AG
              Ab       WORD     Start-Bytenummer
              Anz      WORD     Anzahl der Worte, die gelesen werden sollen
              Buf      _PVOID   Pointer auf den Zielspeicher im PC
     
     Return:  BOOL     TRUE     wenn erfolgreich 
                       FALSE    bei Fehler pS7->Err auswerten
*/               
/* ------------------------------------------------------------------ */
 
extern BOOL WINAPI 
S7WrMB (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Zweck:  S7WrMW  schreibt ans das mit  pS7  initalisierte AG ab dem 
              Merkerbyte <Ab> <Anz> Bytes in den Speicher 
              Buf  ein. Maximale Anzahl = 128 Byte
               
  
  Parameter:  Name     Typ      Beschreibung
              pS7      LPS7      Pointer auf den Speicher fÅr das angewÑhlte 
                                AG
              Ab       WORD     Start-Bytenummer
              Anz      WORD     Anzahl der Worte, die gelesen werden sollen
              Buf      _PVOID   Pointer auf den Quellspeicher im PC
     
     Return:  BOOL     TRUE     wenn erfolgreich 
                       FALSE    bei Fehler pS7->Err auswerten
*/               
/* ------------------------------------------------------------------ */

extern BOOL WINAPI
S7RdMW (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Zweck:  S7RdMW  liest vom  mit  pS7  initalisierten AG ab dem 
              Merkerwort <Ab> <Anz> Bytes in den PC-Speicher 
              Buf ein. Maximale Anzahl = 64 Worte
              !!! Beachte !!!              
              In der SPS gilt fÅr SPS Programmierer
                                         
                   
                   W0 = Byte 0 und Byte 1
                   W2 = Byte 2 und Byte 3 ...
                   
                   W1 = Byte 1 und Byte 2
                   -> bei Verwendung von ungeraden Worten ist eine 
                   Doppelbelegung gegeben. 
                   Der Trebier unterstÅtz deshalb nur gerade Worte->
               d. h. im PC haben sie z.NB:
               WORD Buf[64];                 
               
               nach dem Aufruf S7Rd?W (pS7, 0, 5, Buf) steht
               in Buf[0]  Wort 0 (nach SPS- Adressierung)
                  Buf[1]  Wort 2 (nach SPS- Adressierung)
                  Buf[2]  Wort 4 (nach SPS- Adressierung)
               Sie mÅssen also die StartWortnummer halbieren, um im
               PC richtig zugreifen zu kînnen. Dies gilt auch fÅr 
               Datenbausteine !!
               

              
              
 
  
  Parameter:  Name     Typ      Beschreibung
              pS7      LPS7      Pointer auf den Speicher fÅr das angewÑhlte 
                                AG
              Ab       WORD     Start-Bytenummer
              Anz      WORD     Anzahl der Worte, die gelesen werden sollen
              Buf      _PVOID   Pointer auf den Zielspeicher im PC
     
     Return:  BOOL     TRUE     wenn erfolgreich 
                       FALSE    bei Fehler pS7->Err auswerten
*/               
/* ------------------------------------------------------------------ */


extern BOOL WINAPI 
S7WrMW (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Wie S7RdMW nur eben schreiben 
*/

/* ------------------------------------------------------------------ */
/* -----------------Eingangs-Operationen----------------------------- */
/* ------------------------------------------------------------------ */

extern BOOL WINAPI 
S7RdEB (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Zweck:  S7RdEB  liest vom  mit  pS7  initalisierten AG ab dem 
              Eingangsbyte <Ab> <Anz> Bytes in den PC-Speicher 
              Buf  ein. Maximale Anzahl = 128 Byte
               
  
  Parameter:  Name     Typ      Beschreibung
              pS7      LPS7      Pointer auf den Speicher fÅr das angewÑhlte 
                                AG
              Ab       WORD     Start-Bytenummer
              Anz      WORD     Anzahl der Worte, die gelesen werden sollen
              Buf      _PVOID   Pointer auf den Zielspeicher im PC
     
     Return:  BOOL     TRUE     wenn erfolgreich 
                       FALSE    bei Fehler pS7->Err auswerten
*/               
/* ------------------------------------------------------------------ */

extern BOOL WINAPI 
S7RdEW (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Wie S7RdMW 
*/
/* ------------------------------------------------------------------ */
/* ------------------------------------------------------------------ */
/* -----------------Ausgangs-Operationen----------------------------- */
/* ------------------------------------------------------------------ */

extern BOOL WINAPI 
S7RdAB (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Zweck:  S7RdAB  liest vom  mit  pS7  initalisierten AG ab dem 
              Ausgangsbyte <Ab> <Anz> Bytes in den PC-Speicher 
              Buf  ein. Maximale Anzahl = 128 Byte
               
  
  Parameter:  Name     Typ      Beschreibung
              pS7      LPS7      Pointer auf den Speicher fÅr das angewÑhlte 
                                AG
              Ab       WORD     Start-Bytenummer
              Anz      WORD     Anzahl der Worte, die gelesen werden sollen
              Buf      _PVOID   Pointer auf den Zielspeicher im PC
     
     Return:  BOOL     TRUE     wenn erfolgreich 
                       FALSE    bei Fehler pS7->Err auswerten
*/               
/* ------------------------------------------------------------------ */

extern BOOL WINAPI 
S7WrAB (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Zweck:  S7WrAB   schreibt an das mit  pS7  initalisierte AG ab dem 
              Ausgangsbyte <Ab> <Anz> Bytes in den Speicher 
              Buf  ein. Maximale Anzahl = 128 Byte
               
  
  Parameter:  Name     Typ      Beschreibung
              pS7      LPS7      Pointer auf den Speicher fÅr das angewÑhlte 
                                AG
              Ab       WORD     Start-Bytenummer
              Anz      WORD     Anzahl der Worte, die gelesen werden sollen
              Buf      _PVOID   Pointer auf den Quellspeicher im PC
     
     Return:  BOOL     TRUE     wenn erfolgreich 
                       FALSE    bei Fehler pS7->Err auswerten
*/               
/* ------------------------------------------------------------------ */

extern BOOL WINAPI 
S7RdAW (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Wie S7RdMW 
*/
/* ------------------------------------------------------------------ */

extern BOOL WINAPI 
S7WrAW (LPS7 pS7, WORD Ab, WORD Anz, _PVOID Buf);
/*
      Wie S7RdMW nur eben schreiben 
*/
/* ------------------------------------------------------------------ */
                                               
/* ------------------------------------------------------------------ */
/* -----------------DB      -Operationen----------------------------- */
/* ------------------------------------------------------------------ */

extern BOOL WINAPI
S7RdDB (LPS7 pS7, WORD  DBNr, WORD Ab, WORD Anz, _PVOID Buf);
/*       
      Zweck:  S7RdDB liest vom mit pS7  initalisierten AG den Datenbaustein
              der Nummer Nr ab Datenwort Ab WortAnz Worte in den 
              PC-Speicher DstBuf  ein. Die Daten werden wortweise mit Drehen 
              der Bytes gelesen. max. 64 Wort
              !!! Beachte !!!              
              In der SPS gilt fÅr SPS Programmierer
                                         
                   
                   W0 = Byte 0 und Byte 1
                   W2 = Byte 2 und Byte 3 ...
                   
                   W1 = Byte 1 und Byte 2
                   -> bei Verwendung von ungeraden Worten ist eine 
                   Doppelbelegung gegeben. 
                   Der Trebier unterstÅtz deshalb nur gerade Worte->
               d. h. im PC haben sie z.NB:
               WORD Buf[64];                 
               
               nach dem Aufruf S7Rd?W (pS7, 0, 5, Buf) steht
               in Buf[0]  Wort 0 (nach SPS- Adressierung)
                  Buf[1]  Wort 2 (nach SPS- Adressierung)
                  Buf[2]  Wort 4 (nach SPS- Adressierung)
               Sie mÅssen also die StartWortnummer halbieren, um im
               PC richtig zugreifen zu kînnen. Dies gilt auch fÅr 
               Datenbausteine !!
  
  Parameter:  Name     Typ      Beschreibung
              pS7      LPS7      Pointer auf den Speicher f¸r das angew‰hlte
                                AG
              Nr       BYTE     Nummer des zu lesenden Datenbausteins
              Ab       WORD     Nummer des Datenwortes, ab welchem gelesen 
                                werden soll
              WortAnz  WORD     Anzahl der Worte, die gelesen werden sollen
              Buf      _PVOID   Pointer auf den Zielspeicher im PC 

     Return:  BOOL     TRUE     wenn erfolgreich 
                       FALSE    bei Fehler 
                                lpS7->Err enth‰lt den Fehler (S7_E_XXX)
                                Soll ein Bausteinbereich gelesen werden, der 
                                im AG nicht exisitiert, so liefert die Funktion 
                                auch FALSE zur¸ck. lpS7->Err = S7_E_NOBST
*/
/*------------------------------------------------------------*/

extern BOOL WINAPI 
S7WrDB (LPS7 pS7, WORD  DBNr, WORD Ab, WORD Anz, _PVOID Buf);
/* ------------------------------------------------------------------ */

extern void WINAPI
S7ExitAll (void);
extern BOOL WINAPI
S7PPIInit (LPS7 lpS7, WORD Com, WORD SPSMPIAdr, WORD LocalMPIAdr, WORD Baud);
extern BOOL WINAPI
S7RdTimer (LPS7 pS7, WORD Ab, WORD Anz, LPDWORD Buf);
/*
  Liest Anz Timer ab Nr <Ab> aus der SPS. Der Treiber rechnet das SPS-Format in
  Millisekunden um, deshalb wird hier als <Buf> auch als Pointer auf Long

*/

extern BOOL WINAPI
S7WrTimer (LPS7 pS7, WORD Ab, WORD Anz, LPDWORD Buf);
/*
  Schreibt  Anz Timer ab Nr <Ab> in die SPS.
  Der Wert der Timer ist in ms anzugeben. Das SPS-Format wird
  automatisch erzeugt. Dazu kann es zwangslÑufig zu Rundungen kommen!
  Nur fÅr Anwender mit SPS-Kenntnissen geeignet !
  kleinste Auflîsung 10 ms Schritte
*/

extern BOOL WINAPI
S7RdCounter (LPS7 pS7, WORD Ab, WORD Anz, LPWORD Buf);
/*
  Liest Anz ZÑhler ab Nr <Ab> aus der SPS 
  maximaler Wert eines ZÑhlers 999
  Der Treiber konvertiert automatisch vom SPS-Format ins PC-Format

*/

extern BOOL WINAPI
S7WrCounter (LPS7 pS7, WORD Ab, WORD Anz, LPWORD Buf);